# dimes

./: .gitignore  Cargo.toml  README.md  clippy.toml  server.env
src/: cli.rs  crypto.rs  main.rs
src/gem/: Cargo.toml
src/gem/src/: cfg.rs  main.rs
src/gem/src/http/: mod.rs  shard.rs
src/gem/src/http/shards/: mod.rs  register.rs
src/lib/: Cargo.toml
src/lib/src/: array_pool.rs  bstr.rs  buf.rs  chunk.rs  crypto.rs  error.rs  error_code.rs  lib.rs  message.rs  net.rs  token.rs
src/lib/src/api/: mod.rs
src/lib/src/api/shard/: chunk.rs  mod.rs
src/lib/src/net/: message.rs  mod.rs  types.rs
src/lib/src/net/types/: chunk_hash.rs  mod.rs  shard_info.rs
src/lib/src/pools/: chunk.rs  message.rs  mod.rs  string.rs
src/routes/: chunks.rs  mod.rs
src/server/: .env  Cargo.toml
src/server/migrations/: chunks.sql
src/server/src/: cfg.rs  db_store.rs  http.rs  main.rs  tcp.rs
src/server/src/api/: info.rs  mod.rs  response.rs  responses.rs
src/server/src/api/media/: mod.rs
src/server/src/api/media/upload/: multipart.rs  resumable.rs
src/server/src/api/shard/: mod.rs  register.rs
src/server/src/http/: mod.rs  response.rs  shard.rs  upload.rs
src/server/src/net/: mod.rs  shards.rs
src/server/src/net/api/: info.rs  mod.rs  response.rs
src/server/src/net/api/media/upload/: mod.rs  resumable.rs
src/server/src/storage/: mod.rs  temp.rs  types.rs
src/shard/: .env  Cargo.toml
src/shard/migrations/: migrations.sql
src/shard/src/: cfg.rs  cli.rs  id.rs  main.rs  net.rs  pools.rs  storage.rs
src/shard/src/api/: chunk.rs  info.rs  mod.rs
src/shard/src/api/routes/: mod.rs
src/shard/src/api/routes/chunk/: mod.rs  upload.rs
src/shard/src/storage/: chunk.rs  info.rs  mod.rs
