[package]
name = "shard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["parking_lot"] }
clap = { version = "*", features = ["derive"] }

tokio = { version = "*", features = [
    "rt",
    "rt-multi-thread",
    "parking_lot",
    "sync",
    "macros",
    "net",
    "fs",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

once_cell = "*"
x25519-dalek = "*"
blake2 = "*"
rand = "*"

uuid = { version = "*", features = ["v4", "fast-rng"] }
redis = { version = "*", default-features = false, features = [
    "acl",
    "aio",
    "ahash",
    "tokio-comp",
] }
