[package]
name = "lib"
version = "0.1.0"
edition = "2021"


[dependencies]
tracing = "*"
tracing-subscriber = { version = "*", features = ["parking_lot"] }
thiserror = "*"

tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_arrays = "*"
bincode = "*"

uuid = { version = "*", features = ["v4", "v7", "fast-rng", "serde"] }
once_cell = "*"
deadpool = "*"
paste = "*"
