[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
lib = { path = "../lib" }

anyhow = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["parking_lot"] }
clap = { version = "*", features = ["derive"] }
config = "*"
once_cell = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
tokio-postgres = { version = "*", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
axum = { version = "*", features = ["tracing"] }
reqwest = { version = "*", features = ["json", "native-tls"] }
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v7", "fast-rng"] }
rand = "*"
sha2 = "*"
