[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
lib = { path = "../lib" }

anyhow = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["parking_lot"] }
clap = { version = "*", features = ["derive"] }
config = { version = "*", features = ["toml"] }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
once_cell = "*"

axum = { version = "*", features = ["tracing", "http2", "multipart"] }
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time",
] }

uuid = { version = "*", features = ["v7", "fast-rng"] }
rand = "*"
sha2 = "*"
