[package]
name = "shard"
version = "0.1.0"
edition = "2021"


[dependencies]
lib = { path = "../lib" }

dotenvy = "*"

anyhow = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["parking_lot"] }
config = "*"
chacha20poly1305 = "*"
deadpool = "*"

tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
axum = { version = "*", features = ["tracing", "http2", "multipart"] }
chrono = "*"

once_cell = "*"
uuid = { version = "*", features = ["v4", "v7", "fast-rng"] }
redb = "*"
