[package]
name = "shard"
version = "0.1.0"
edition = "2021"


[dependencies]
lib = { path = "../lib" }

dotenvy = "*"
thiserror = "*"

tracing = "*"
tracing-subscriber = { version = "*", features = ["parking_lot"] }
config = "*"
chacha20poly1305 = "*"
deadpool = "*"
base64 = "*"
tower-http = { version = "*", features = [
    "set-header",
    "compression-br",
    "compression-gzip",
    "compression-zstd",
    "decompression-br",
    "decompression-gzip",
    "decompression-zstd",
] }

tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
axum = { version = "*", features = ["tracing", "http2", "multipart"] }
chrono = { version = "*", features = ["serde"] }

once_cell = "*"
uuid = { version = "*", features = ["v4", "v7", "fast-rng"] }
redb = "*"
