[package]
name = "shard"
version = "0.1.0"
edition = "2021"


[dependencies]
lib = { path = "../lib" }

dotenvy = "*"
anyhow = "*"

tracing = "*"
tracing-subscriber = "*"
config = "*"
deadpool = "*"

tokio = { version = "*", features = ["full"] }
serde = "*"
bincode = "*"
chrono = "*"
tokio-rustls = { version = "*", default-features = false, features = ["ring"] }
webpki-roots = "*"

once_cell = "*"
uuid = { version = "*", features = ["v4", "v7", "fast-rng"] }
redb = "*"
